--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/index.js"></script>
+  <div class="modal-container"></div>
+
 </body>
+
 
 </html>
